--- a/gui/Dockerfile
+++ b/gui/Dockerfile
@@ -44,6 +44,7 @@ RUN set -eux; \
     && apt-get install -y pulseaudio \
     && apt-get install -y mc \
     && apt-get install -y autoconf libtool \
+    && apt-get install -y xmlstarlet \
     && apt-get clean -y && rm -rf /var/lib/apt/lists/* 
 RUN set -eux; \    
     wget -O /tmp/qtcreator.deb ${QTCREATOR_URL} \
