--- a/qtcreator_app.env
+++ b/qtcreator_app.env
@@ -1,15 +1,10 @@
 # You can find documentation for all the supported env variables at https://github.com/ZanyXDev/for-Qt5-and-Qtd6-dev/wiki/Decribe-environment-variables
 
-WORKSPACE_LOCATION=$HOME/docker_workspace
-
-BitamiGit='bitnami/git:latest'
-
-Ubuntu='ubuntu:22.04'
-
-Temurin='eclipse-temurin:17' 
-
+APP_LOCATION=$HOME/qtcreator_app
+BITNAMI_GIT='bitnami/git:latest'
+UBUNTU_LTS='ubuntu:22.04'
+TEMURIN_JDK_17='eclipse-temurin:17' 
 QT_VERSION="v5.15.14-lts-lgpl"
-
 QT_VERSION_SHORT="5.15.14"
 
 #Том данных , чтобы данные могли сохраняться между компиляциями/сборками
