--- a/gui/Dockerfile
+++ b/gui/Dockerfile
@@ -47,16 +47,16 @@ RUN set -eux; \
     echo 'APT::Get::Install-Recommends "false";'> /etc/apt/apt.conf.d/99nosuggest;\
     echo 'APT::Get::Install-Suggests "false";' >> /etc/apt/apt.conf.d/99nosuggest;\
     export DEBIAN_FRONTEND=noninteractive ;\
-    apt-get -y update \
-    && apt-get upgrade -y \
-    && apt-get install -y locales sudo wget git libncurses5 libdouble-conversion3 libc6 libc-bin \
-    pulseaudio mc autoconf libtool xmlstarlet gdb lldb clang-format \
-    && apt-get clean -y && rm -rf /var/lib/apt/lists/* \    
-    && wget -O /tmp/qtcreator.deb ${QTCREATOR_URL} \
-    && dpkg -i /tmp/qtcreator.deb \
-	&& rm /tmp/qtcreator.deb \
-    && chown -R $USER_ID:$GROUP_ID /opt/qt-creator; \
-    && chown -R $USER_ID:$GROUP_ID /opt/cmake
+    apt-get -y update ;\
+    apt-get upgrade -y ;\
+    apt-get install -y locales sudo wget git libncurses5 libdouble-conversion3 libc6 libc-bin \
+    pulseaudio mc autoconf libtool xmlstarlet gdb lldb clang-format ;\
+    apt-get clean -y && rm -rf /var/lib/apt/lists/* ;\    
+    wget -O /tmp/qtcreator.deb ${QTCREATOR_URL} ;\
+    dpkg -i /tmp/qtcreator.deb ;\
+	rm /tmp/qtcreator.deb ;\
+    chown -R $USER_ID:$GROUP_ID /opt/qt-creator; \
+    chown -R $USER_ID:$GROUP_ID /opt/cmake
 	
 RUN set -eux; \  	
     echo "/opt/Qt/${QT_VERSION}-${TARGETARCH}-lts-lgpl/lib" >> /etc/ld.so.conf.d/x86_64-linux-gnu.conf ;\
