add useful scripts

--- a/qtcreator_app.env
+++ b/qtcreator_app.env
@@ -7,5 +7,15 @@ TEMURIN_JDK_17='eclipse-temurin:17'
 QT_VERSION="v5.15.14-lts-lgpl"
 QT_VERSION_SHORT="5.15.14"
 
+SRC_VOLUME_NAME="${QT_VERSION}-src-volume"
+SDK_VOLUME_NAME="${QT_VERSION}-android-sdk-volume"
+QT5_OPT_VOLUME_NAME="${QT_VERSION}-opt-volume"
+
+TOOLCHAIN_IMAGE_NAME="zanyxdev/qt5-toolchain:${QT_VERSION}" 
+QTCREATOR_IMAGE_NAME="zanyxdev/${QT_VERSION_SHORT}-qtcreator:v14.0.2" 
+QTCREATOR_URL="https://github.com/qt-creator/qt-creator/releases/download/v14.0.2/qtcreator-linux-x64-14.0.2.deb"
+CMAKE_URL="https://github.com/Kitware/CMake/releases/download/v3.30.0/cmake-3.30.0-linux-x86_64.tar.gz"
+CMDTOOLS_URL="https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip"
+
 #Том данных , чтобы данные могли сохраняться между компиляциями/сборками
 CCACHE_VOLUME="ccache-volume"
