add Update docker file

--- a/update/Dockerfile
+++ b/update/Dockerfile
@@ -3,23 +3,58 @@ FROM ubuntu:22.04 AS base_dev
 
 LABEL Description="This image based on Ubuntu 22.04,provides a base development \
                    environment (Linux and Android) for Qt developers"
-ARG QT_WEBKIT
-ARG QT_WEBENGINE
-ARG CMAKE_URL
-ARG QT_VERSION
-ARG TARGETARCH
 ARG ANDROID_NDK_VER
+ARG BUILD_TAG
+ARG CMAKE_URL
+ARG GROUP_ID
+ARG QTCREATOR_URL
+ARG QT_VERSION
+ARG QT_WEBENGINE
+ARG QT_WEBKIT
+ARG TARGETARCH
+ARG TZ
+ARG USER_ID
 
-ENV CMAKE_URL=${CMAKE_URL:-"https://github.com/Kitware/CMake/releases/download/v3.29.0/cmake-3.29.0-linux-x86_64.tar.gz"}
-ENV QT_WEBKIT=${QT_WEBKIT:-"n"}
-ENV QT_WEBENGINE=${QT_WEBENGINE:-"n"}
+# Declare build parameters.
+ENV ANDROID_NDK_ROOT=/opt/android-sdk/ndk/${ANDROID_NDK_VER}
 ENV ANDROID_NDK_VER=${ANDROID_NDK_VER:-"22.1.7171670"}
 ENV ANDROID_SDK_ROOT=/opt/android-sdk
-ENV ANDROID_NDK_ROOT=/opt/android-sdk/ndk/${ANDROID_NDK_VER}
+ENV DEBIAN_FRONTEND="noninteractive" 
+ENV DISPLAY=:0
+ENV HOME=/home/developer
 ENV JAVA_HOME=/opt/java/openjdk
+ENV LANG=ru_RU.UTF-8
+ENV LANGUAGE=ru_RU:ru
+ENV LC_ALL=ru_RU.UTF-8
+ENV LC_LANG=ru_RU.UTF-8
+ENV LD_LIBRARY_PATH=/usr/local/lib
+# Add libusb dans library path
+ENV OPENSSL_ROOT_DIR="/opt/android_openssl/ssl_1.1"
 ENV PATH="${JAVA_HOME}/bin:${PATH}"
+ENV PATH="${PATH}:/opt/Qt/${QT_VERSION}-${TARGETARCH}-lts-lgpl/bin:/opt/Qt/${QT_VERSION}-${TARGETARCH}-lts-lgpl/libexec:/opt/qtcreator/Tools/QtCreator/bin"
 ENV PATH="/opt/cmake/bin:${PATH}"
 ENV PATH="/opt/cmdline-tools/bin:${PATH}"
+ENV PERSIST=1
+ENV PS1="\u@${BUILD_TAG}:\w\$"
+ENV QML2_IMPORT_PATH="/opt/Qt/${QT_VERSION}-${TARGETARCH}-lts-lgpl/qml"
+ENV QML_IMPORT_PATH="/opt/Qt/${QT_VERSION}-${TARGETARCH}-lts-lgpl/qml"
+ENV QT_HOST_PATH="/opt/Qt/${QT_VERSION}-${TARGETARCH}-lts-lgpl/"
+ENV QT_PLUGIN_PATH="/opt/Qt/${QT_VERSION}-${TARGETARCH}-lts-lgpl/plugins"
+ENV QT_QPA_FONTDIR="/usr/share/fonts/truetype"
+ENV QT_WEBENGINE=${QT_WEBENGINE:-"n"}
+ENV QT_WEBKIT=${QT_WEBKIT:-"n"}
+# Allow colored output on command line.
+ENV TERM=xterm-color  
+# Set environment variables, see Readme.md
+# +Timezone (если надо на этапе сборки)
+ENV TZ=Europe/Moscow
+ENV xdg_runtime_dir=/run/user/"${USER_ID}"
+ENV QTCREATOR_URL
+ENV CMAKE_URL
+
+#Troubleshooting enabling the logging categories under qt.qpa is a good idea
+#in general. This will show some debug prints both from eglfs and the input handlers.
+#ENV QT_LOGGING_RULES=qt.qpa.*=true
 
 RUN set -eux; \
     echo "go-faster apt"; \
@@ -55,11 +90,59 @@ RUN set -eux; \
     apt-get install -y libfontconfig1-dev fontconfig;\
     apt-get install -y apt-transport-https  ca-certificates gnupg nano libssl3 openssl ;\
     echo "Wget, curl unzip"; \
-    apt-get -y install wget curl unzip; \   
+    apt-get -y install wget curl unzip; \ 
+    echo "Install X11 mini apps and  QtCreator libs"
+    apt-get install -y \
+        locales sudo git libncurses5 libdouble-conversion3 libc6 libc-bin \
+        libicu70 pulseaudio mc autoconf libtool xmlstarlet gdb lldb clang-format ;
+    apt-get clean -y && rm -rf /var/lib/apt/lists/* ;\              
     apt-get clean -y ;\
     rm -rf /var/lib/apt/lists/*
+    
 #-----------------------  Copy from other -----------------------------
 COPY --from=eclipse-temurin:17 $JAVA_HOME $JAVA_HOME                                   
+COPY ./cmake /opt/cmake
+COPY .qtcreator.deb /tmp/qtcreator.deb 
+#Install X11 mini apps and  QtCreator libs
+RUN set -eux; \ 
+    dpkg -i /tmp/qtcreator.deb ;\
+	rm /tmp/qtcreator.deb ;\
+    chown -R $USER_ID:$GROUP_ID /opt/qt-creator; \
+    chown -R $USER_ID:$GROUP_ID /opt/cmake
+
+# Install latest libusb
+RUN set -eux; \ 
+    cd /usr/local/src;
+    git clone -b v1.0.27 https://github.com/libusb/libusb; 
+    cd libusb; 
+    ./bootstrap.sh; 
+    ./configure; 
+    make; 
+    make install;    		
+    echo "/usr/local/lib" >> /etc/ld.so.conf.d/x86_64-linux-gnu.conf ;
+    echo "/opt/Qt/${QT_VERSION}-${TARGETARCH}-lts-lgpl/lib" >> /etc/ld.so.conf.d/x86_64-linux-gnu.conf ;
+    /sbin/ldconfig ;
+    echo "Generate locale" ;
+    sed -i -e 's/# ru_RU.UTF-8 UTF-8/ru_RU.UTF-8 UTF-8/' /etc/locale.gen ;
+    locale-gen ;
+    echo "Setup timezone" ;
+    ln -snf /usr/share/zoneinfo/$TZ /etc/localtime ;
+    echo $TZ > /etc/timezone    
+    if [ ${USER_ID:-0} -ne 0 ] && [ ${GROUP_ID:-0} -ne 0 ]; then \    
+      groupadd -g ${GROUP_ID} developer; \
+      useradd -u ${USER_ID} -g ${GROUP_ID} developer; \
+      install -d -m 0755 -o developer -g ${GROUP_ID} /home/developer; \
+      adduser developer sudo; \
+      echo "adding user developer to audio group"; \
+      adduser	developer audio; \
+      echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers; \      
+      mkdir -p /home/developer; \
+      chown ${USER_ID}:${GROUP_ID} -R /home/developer; \
+    fi   
     
+USER developer
+WORKDIR /home/developer
+
+ENTRYPOINT [ "/bin/bash", "-l", "-c" ]
 
     
