--- a/qtcreator_app.env
+++ b/qtcreator_app.env
@@ -4,8 +4,8 @@ APP_LOCATION=$HOME/qtcreator_app
 BITNAMI_GIT='bitnami/git:latest'
 UBUNTU_LTS='ubuntu:22.04'
 TEMURIN_JDK_17='eclipse-temurin:17' 
-QT_VERSION="v5.15.14-lts-lgpl"
-QT_VERSION_SHORT="5.15.14"
+QT_VERSION="v5.15.8-lts-lgpl"
+QT_VERSION_SHORT="5.15.8"
 
 SRC_VOLUME_NAME="${QT_VERSION}-src-volume"
 SDK_VOLUME_NAME="${QT_VERSION}-android-sdk-volume"
@@ -14,7 +14,7 @@ QT5_OPT_VOLUME_NAME="${QT_VERSION}-opt-volume"
 TOOLCHAIN_IMAGE_NAME="zanyxdev/qt5-toolchain:${QT_VERSION}" 
 QTCREATOR_IMAGE_NAME="zanyxdev/${QT_VERSION_SHORT}-qtcreator:v15.0.0" 
 QTCREATOR_URL="https://github.com/qt-creator/qt-creator/releases/download/v15.0.0/qtcreator-linux-x64-15.0.0.deb"
-CMAKE_URL="https://github.com/Kitware/CMake/releases/download/v3.30.5/cmake-3.30.5-linux-x86_64.tar.gz"
+CMAKE_URL="https://github.com/Kitware/CMake/releases/download/v3.31.3/cmake-3.31.3.tar.gz"
 CMDTOOLS_URL="https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip"
 
 #Том данных , чтобы данные могли сохраняться между компиляциями/сборками
