add builder name

--- a/qtcreator_app.env
+++ b/qtcreator_app.env
@@ -12,6 +12,7 @@ SDK_VOLUME_NAME="${QT_VERSION}-android-sdk-volume"
 QT5_OPT_VOLUME_NAME="${QT_VERSION}-opt-volume"
 
 TOOLCHAIN_IMAGE_NAME="zanyxdev/qt5-toolchain:${QT_VERSION}" 
+BUILDER_IMAGE_NAME="zanyxdev/qt5-builder:latest" 
 QTCREATOR_IMAGE_NAME="zanyxdev/${QT_VERSION_SHORT}-qtcreator:v15.0.0" 
 QTCREATOR_URL="https://github.com/qt-creator/qt-creator/releases/download/v15.0.0/qtcreator-linux-x64-15.0.0.deb"
 CMAKE_URL="https://github.com/Kitware/CMake/releases/download/v3.31.3/cmake-3.31.3.tar.gz"
